--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dev:nuxt": "pnpm --filter nuxt-app dev",
     "dev:react": "pnpm --filter vite-react dev",
     "dev:solid": "pnpm --filter vite-solid dev",
+    "dev:solid-start": "pnpm --filter solid-start-app dev",
     "dev:vue": "pnpm --filter vite-vue dev",
     "docs:dev": "pnpm --filter site dev",
     "format": "biome format --write",
