feat(connectors,core,react): tempo

--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -43,6 +43,7 @@
     "@safe-global/safe-apps-sdk": "~9.1.0",
     "@wagmi/core": "workspace:*",
     "@walletconnect/ethereum-provider": "~2.21.1",
+    "ox": "~0.11.1",
     "porto": "~0.2.35",
     "typescript": ">=5.7.3",
     "viem": "2.x"
@@ -69,6 +70,9 @@
     "@walletconnect/ethereum-provider": {
       "optional": true
     },
+    "ox": {
+      "optional": true
+    },
     "porto": {
       "optional": true
     },
@@ -86,6 +90,7 @@
     "@wagmi/core": "workspace:*",
     "@walletconnect/ethereum-provider": "catalog:",
     "msw": "^2.4.9",
+    "ox": "catalog:",
     "porto": "catalog:"
   },
   "contributors": [
