--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "catalog:",
     "sherif": "^1.0.0",
     "simple-git-hooks": "^2.11.1",
+    "testcontainers": "^11.11.0",
     "typescript": "5.9.3",
     "viem": "2.43.3",
     "vite-plugin-react-fallback-throttle": "^0.1.1",
