--- a/packages/tempo/package.json
+++ b/packages/tempo/package.json
@@ -36,6 +36,7 @@
   },
   "peerDependencies": {
     "@tanstack/query-core": ">=5.0.0",
+    "@tanstack/react-query": ">=5.0.0",
     "@wagmi/core": ">=2.18",
     "typescript": ">=5.7.3",
     "viem": ">=2.43.0",
@@ -43,6 +44,9 @@
   },
   "peerDependenciesMeta": {
     "@tanstack/query-core": {
+      "optional": true
+    },
+    "@tanstack/react-query": {
       "optional": true
     },
     "@wagmi/core": {
@@ -60,7 +64,10 @@
   },
   "devDependencies": {
     "@tanstack/query-core": "catalog:",
+    "@tanstack/react-query": "catalog:",
+    "@types/react": "catalog:",
     "@wagmi/core": "workspace:*",
+    "react": "catalog:",
     "wagmi": "workspace:*"
   },
   "contributors": [
