docs: add /tempo redirect

--- a/site/vercel.json
+++ b/site/vercel.json
@@ -136,6 +136,12 @@
     },
 
     {
+      "source": "/tempo",
+      "destination": "/tempo/getting-started",
+      "permanent": true
+    },
+
+    {
       "source": "/vue/api/actions/useAccount",
       "destination": "/vue/api/actions/useConnection",
       "permanent": true
