--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,6 @@
 @tmm @jxom
 
 /packages/connectors/src/gemini @mikelxc
-/packages/connectors/src/metaMask @wenfix @ffmcgee725 @jiexi @adonesky1
+/packages/connectors/src/metaMask @wenfix @ffmcgee725 @jiexi @adonesky1 @chakra-guy
 /packages/connectors/src/safe @DaniSomoza @dasanra @mikhailxyz @yagopv
 /packages/connectors/src/walletConnect @ganchoradkov @glitch-txs @ignaciosantise @tomiir
