--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -79,7 +79,7 @@ jobs:
     timeout-minutes: 5
     strategy:
       matrix:
-        typescript-version: ['5.7.3', '5.8.3', '5.9.3', 'latest']
+        typescript-version: ['5.9.3', 'latest']
         viem-version: ['2.43.3', 'latest']
 
     steps:
