--- a/site/vercel.json
+++ b/site/vercel.json
@@ -2,6 +2,57 @@
   "cleanUrls": true,
   "redirects": [
     {
+      "source": "/tempo/actions/reward.start",
+      "destination": "/tempo/actions/reward.distribute",
+      "permanent": true
+    },
+    {
+      "source": "/tempo/actions/reward.watchRewardScheduled",
+      "destination": "/tempo/actions/reward.watchRewardDistributed",
+      "permanent": true
+    },
+    {
+      "source": "/tempo/actions/nonce.getNonceKeyCount",
+      "destination": "/tempo/actions/nonce",
+      "permanent": true
+    },
+    {
+      "source": "/tempo/actions/nonce.watchActiveKeyCountChanged",
+      "destination": "/tempo/actions/nonce",
+      "permanent": true
+    },
+    {
+      "source": "/tempo/actions/amm.watchFeeSwap",
+      "destination": "/tempo/actions/amm",
+      "permanent": true
+    },
+    {
+      "source": "/tempo/hooks/reward.useStart",
+      "destination": "/tempo/hooks/reward.useDistribute",
+      "permanent": true
+    },
+    {
+      "source": "/tempo/hooks/reward.useWatchRewardScheduled",
+      "destination": "/tempo/hooks/reward.useWatchRewardDistributed",
+      "permanent": true
+    },
+    {
+      "source": "/tempo/hooks/nonce.useNonceKeyCount",
+      "destination": "/tempo/hooks/nonce",
+      "permanent": true
+    },
+    {
+      "source": "/tempo/hooks/nonce.useWatchActiveKeyCountChanged",
+      "destination": "/tempo/hooks/nonce",
+      "permanent": true
+    },
+    {
+      "source": "/tempo/hooks/amm.useWatchFeeSwap",
+      "destination": "/tempo/hooks/amm",
+      "permanent": true
+    },
+
+    {
       "source": "/cli",
       "destination": "/cli/getting-started",
       "permanent": true
