--- a/biome.json
+++ b/biome.json
@@ -5,7 +5,9 @@
       "**",
       "!**/CHANGELOG.md",
       "!**/pnpm-lock.yaml",
-      "!**/tsconfig.base.json"
+      "!**/tsconfig.base.json",
+      "!**/routeTree.gen.ts",
+      "!**/worker-configuration.d.ts"
     ]
   },
   "formatter": {
