--- a/playgrounds/tanstack-start/package.json
+++ b/playgrounds/tanstack-start/package.json
@@ -6,15 +6,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest run",
-    "deploy": "npm run build && wrangler deploy"
+    "deploy": "pnpm build && wrangler deploy"
   },
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.20.0",
-    "@tanstack/react-devtools": "^0.9.1",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/react-router": "^1.145.7",
-    "@tanstack/react-router-devtools": "^1.145.7",
     "@tanstack/react-router-ssr-query": "^1.145.7",
     "@tanstack/react-start": "^1.145.7",
     "@tanstack/router-plugin": "^1.145.7",
@@ -25,6 +22,8 @@
     "wagmi": "workspace:*"
   },
   "devDependencies": {
+    "@tanstack/react-devtools": "^0.9.1",
+    "@tanstack/react-router-devtools": "^1.145.7",
     "@tanstack/devtools-vite": "^0.4.1",
     "@vitejs/plugin-react": "catalog:",
     "typescript": "^5.9.3",
