--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
           "@base-org/account",
           "@coinbase/wallet-sdk",
           "@gemini-wallet/core",
-          "@metamask/sdk",
+          "@metamask/connect-evm",
           "@safe-global/safe-apps-provider",
           "@safe-global/safe-apps-sdk",
           "@wagmi/core",
