--- a/playgrounds/tanstack-start/package.json
+++ b/playgrounds/tanstack-start/package.json
@@ -10,27 +10,27 @@
   },
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.20.0",
+    "@tanstack/react-query": "catalog:",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/react-router": "^1.145.7",
     "@tanstack/react-router-ssr-query": "^1.145.7",
     "@tanstack/react-start": "^1.145.7",
     "@tanstack/router-plugin": "^1.145.7",
-    "@tanstack/react-query": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "viem": "2.*",
     "wagmi": "workspace:*"
   },
   "devDependencies": {
+    "@tanstack/devtools-vite": "^0.4.1",
     "@tanstack/react-devtools": "^0.9.1",
     "@tanstack/react-router-devtools": "^1.145.7",
-    "@tanstack/devtools-vite": "^0.4.1",
+    "@types/node": "^24.5.1",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "typescript": "^5.9.3",
     "vite": "catalog:",
-    "wrangler": "^4.57.0",
-    "@types/node": "^24.5.1",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:"
+    "wrangler": "^4.57.0"
   }
 }
