--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -51,24 +51,25 @@ minimumReleaseAgeExclude:
   - viem
 overrides:
   cookie@<0.7.0: 0.7.0
-  devalue@>=5.1.0 <5.6.2: '5.6.2'
-  devalue@>=5.3.0 <=5.6.1: '5.6.2'
-  diff@<8.0.3: '8.0.3'
+  devalue@>=5.1.0 <5.6.2: 5.6.2
+  devalue@>=5.3.0 <=5.6.1: 5.6.2
+  diff@<8.0.3: 8.0.3
   elliptic@<=6.6.0: '>=6.6.1'
   esbuild@<=0.24.2: 0.25.0
-  glob@>=10.2.0 <10.5.0: '10.5.0'
-  h3@<=1.15.4: '1.15.5'
+  glob@>=10.2.0 <10.5.0: 10.5.0
+  h3@<=1.15.4: 1.15.5
   happy-dom@<20.0.2: '>=20.0.2'
-  hono@<4.11.4: '4.11.4'
+  hono@<4.11.4: 4.11.4
   mdast-util-to-hast@<13.2.1: '>=13.2.1'
   nanoid@<3.3.8: 3.3.8
   node-forge@<1.3.2: '>=1.3.2'
   semver@<5.7.2: '>=5.7.2'
   serialize-javascript@>=6.0.0 <6.0.2: 6.0.2
-  tar@=7.5.1: '>=7.5.2'
+  tar@<=7.5.2: '7.5.3'
+  tar@=7.5.1: '7.5.2'
   tmp@<=0.2.3: 0.2.4
-  undici@<6.23.0: '6.23.0'
-  undici@>=7.0.0 <7.18.2: '7.18.2'
+  undici@<6.23.0: 6.23.0
+  undici@>=7.0.0 <7.18.2: 7.18.2
   vite@>=7.1.0 <=7.1.10: '>=7.1.11'
   ws@>=8.0.0 <8.17.1: 8.17.1
 packages:
