--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -38,7 +38,7 @@
     "@base-org/account": "^2.5.1",
     "@coinbase/wallet-sdk": "^4.3.6",
     "@gemini-wallet/core": "~0.3.1",
-    "@metamask/connect-evm": "^0.1.2",
+    "@metamask/connect-evm": "~0.1.2",
     "@safe-global/safe-apps-provider": "~0.18.6",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@wagmi/core": "workspace:*",
