--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -69,6 +69,7 @@ overrides:
   undici@<6.23.0: 6.23.0
   undici@>=7.0.0 <7.18.2: 7.18.2
   vite@>=7.1.0 <=7.1.10: '>=7.1.11'
+  lodash@>=4.0.0 <=4.17.22: '>=4.17.23'
   ws@>=8.0.0 <8.17.1: 8.17.1
 packages:
   - packages/*
