--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -53,6 +53,7 @@ minimumReleaseAgeExclude:
   - viem
 overrides:
   cookie@<0.7.0: 0.7.0
+  lodash@>=4.0.0 <=4.17.22: '>=4.17.23'
   devalue@>=5.1.0 <5.6.2: 5.6.2
   devalue@>=5.3.0 <=5.6.1: 5.6.2
   diff@<8.0.3: 8.0.3
@@ -73,6 +74,7 @@ overrides:
   undici@<6.23.0: 6.23.0
   undici@>=7.0.0 <7.18.2: 7.18.2
   vite@>=7.1.0 <=7.1.10: '>=7.1.11'
+  wrangler@>=4.0.0 <4.59.1: '>=4.59.1'
   ws@>=8.0.0 <8.17.1: 8.17.1
 packages:
   - packages/*
