--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -12,7 +12,7 @@
     "build": "pnpm run clean && pnpm run build:esm+types",
     "build:esm+types": "tsc --project tsconfig.build.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
     "check:types": "tsc --noEmit",
-    "clean": "rm -rf dist tsconfig.tsbuildinfo actions chains codegen connectors query",
+    "clean": "rm -rf dist tsconfig.tsbuildinfo actions chains connectors query",
     "test:build": "publint --strict && attw --pack --ignore-rules cjs-resolves-to-esm"
   },
   "files": [
@@ -23,7 +23,6 @@
     "!src/**/*.test-d.ts",
     "/actions",
     "/chains",
-    "/codegen",
     "/connectors",
     "/query"
   ],
@@ -45,10 +44,6 @@
       "types": "./dist/types/exports/chains.d.ts",
       "default": "./dist/esm/exports/chains.js"
     },
-    "./codegen": {
-      "types": "./dist/types/exports/codegen.d.ts",
-      "default": "./dist/esm/exports/codegen.js"
-    },
     "./connectors": {
       "types": "./dist/types/exports/connectors.d.ts",
       "default": "./dist/esm/exports/connectors.js"
@@ -66,9 +61,6 @@
       ],
       "chains": [
         "./dist/types/exports/chains.d.ts"
-      ],
-      "codegen": [
-        "./dist/types/exports/codegen.d.ts"
       ],
       "connectors": [
         "./dist/types/exports/connectors.d.ts"
