--- a/site/package.json
+++ b/site/package.json
@@ -15,10 +15,12 @@
     "@types/react": "catalog:",
     "@wagmi/connectors": "workspace:*",
     "@wagmi/core": "workspace:*",
+    "@wagmi/solid": "workspace:*",
     "@wagmi/vue": "workspace:*",
     "abitype": "*",
     "nuxt": "^3.19.2",
     "react": "catalog:",
+    "solid-js": "catalog:",
     "unocss": "^66.5.6",
     "viem": "2.*",
     "vitepress": "1.6.3",
