--- a/site/package.json
+++ b/site/package.json
@@ -22,7 +22,7 @@
     "react": "catalog:",
     "solid-js": "catalog:",
     "unocss": "^66.5.6",
-    "viem": "2.*",
+    "viem": "~2.45.1",
     "vitepress": "1.6.3",
     "vitepress-plugin-group-icons": "^1.6.5",
     "vitepress-plugin-llms": "^1.8.1",
