--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -66,7 +66,7 @@ minimumReleaseAgeExclude:
 
 overrides:
   '@isaacs/brace-expansion@<=5.0.0': 5.0.1
-  axios@<=1.13.4: '1.13.5'
+  axios@<=1.13.4: 1.13.5
   cookie@<0.7.0: 0.7.0
   devalue@>=5.1.0 <5.6.2: 5.6.2
   devalue@>=5.3.0 <=5.6.1: 5.6.2
@@ -78,6 +78,7 @@ overrides:
   happy-dom@<20.0.2: '>=20.0.2'
   hono@<4.11.7: 4.11.7
   lodash@>=4.0.0 <=4.17.22: '>=4.17.23'
+  markdown-it@>=13.0.0 <14.1.1: '14.1.1'
   mdast-util-to-hast@<13.2.1: '>=13.2.1'
   nanoid@<3.3.8: 3.3.8
   node-forge@<1.3.2: '>=1.3.2'
