ci: pull tempo image

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -147,6 +147,9 @@ jobs:
         if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: pnpm exec playwright install chromium --with-deps
 
+      - name: Pull Tempo Docker image
+        run: docker pull ghcr.io/tempoxyz/tempo:latest
+
       - name: Run tests
         uses: nick-fields/retry@ce71cc2ab81d554ebbe88c79ab5975992d79ba08
         with:
